        tmp/bin/xd -tm
        ArgData::ArgData(): unknown option: tmp/bin/xd

  * Removed 'throw()' phrases from various functions and man-pages (except
    from several Errno members, as their throw() specifications are required
    by Errno's std::exception base class

  * Removed inline in inline virtual ~Errno() (needed because of a previous
    bug in g++, which has now been repaired)


bobcat (1.19.0)

  * Added the template function binary_search that returning iterator to the
    location of a found element rather than a bool value (as returned by the
    std::binary_search algorithm) telling its caller whether the searched for
    element is present or not

  * The Process class was given additional functionality allowing better
    control over the way child processes are started and the Process man-page
    was updated accordingly

  * The description of the member `header()' in the man-page of the class 
    Milter was improved

  * CGI's man-page now contains a common organization of a program using
    a CGI object

bobcat (1.18.1)

  * Repaired a flaw in Pattern due to which a segfault could occur becasue of
    a failure to initialize the Finite State Automaton processing Perl-like
    character-set abbreviations. Also the HANDLING OF BACKSLASHES by Pattern
    objects was modified: to specify a literal backslash is must now be
    specified twice. 
    NOTE that this change *may* require some maintenance of patterns that were
    hard-coded in programs already using the Pattern class. See the `pattern'
    man-page for details.

  * Removed all left-over redundant include guards
  
  * Renamed all identifiers (macro defines, etc.) that started with _ into
    names not starting with _. This only affects include-guard identifiers and
    symbols used internally, so programs using Bobcat should not be affected
    by this modification.

  * Added the files README.X11 and README.milter 
