@@ -1,7 +1,3 @@
-Add missing functions to Stat, mentioned in its man-page
-
-Add info to the stat manpage indicating what fields of the stat struct are
-returned by the specific members (in particular: device related)
-
+all processed
 --
 
