@@ -82,9 +82,8 @@ manpagesection(CONSTRUCTORS)
         tt(fname) to each of the elements of tt(searchPath) until an existing
         object is found. This object is then used. If tt(fname) is an absolute
         path, tt(searchPath) is ignored.
-    itb(Stat(Stat const &other))
-        The copy constructor is available.
     )
+    The copy constructor is available.
 
 manpagesection(OVERLOADED OPERATORS)
     itemization(
@@ -96,17 +95,14 @@ manpagesection(OVERLOADED OPERATORS)
     The default assignment operator is available.
 
 manpagesection(MEMBER FUNCTIONS)
-     All members of tt(std::ostringstream) and tt(std::exception) are
-available, as tt(FBB::Stat) inherits from these classes.
-
     itemization(
     itb(size_t blockSize() const)
-        Returns the blocksize for filesystem I/O
+        Returns the blocksize (tt(st_blksize)) for filesystem I/O
     itb(size_t device() const)
-        Returns the device number.
+        Returns the device id (tt(st_dev)).
     itb(size_t deviceType() const)
-        Returns the device type number, but only if the object type is
-bf(DEVICE).
+       Returns the device type number, but only if the object type is
+        bf(DEVICE) (tt(st_rdev)).
     itb(size_t error() const)
        Returns the error number associated with an error, in cases where
         bf(operator bool()) returns bf(false). A returned value of 0 indicates
@@ -115,29 +111,32 @@ bf(DEVICE).
        Returns tt(true) if the object has the probed type otherwise tt(false)
         is returned.
     itb(size_t inode() const)
-        Returns the inode number.
+        Returns the inode number (tt(st_ino)).
     itb(size_t gid() const)
-        Returns the group ID of the object's owner.
+        Returns the group ID of the object's owner (tt(st_gid)).
     itb(FBB::DateTime lastAccess() const)
         Returns a bf(FBB::DateTime) object holding information about the
-        object's time of last access.
+        object's time of last access (tt(st_atime)).
     itb(FBB::DateTime lastChange() const)
         Returns a bf(FBB::DateTime) object holding information about the
-        object's time of last status change.
+        object's time of last status change (tt(st_ctime)).
     itb(FBB::DateTime lastModification() const)
         Returns a bf(FBB::DateTime) object holding information about the
-        object's last modification time.
+        object's last modification time (tt(st_mtime)).
     itb(size_t mode() const)
-       Returns the object's raw, uninterpreted mode. Note that this value is
-        usually displayed (and is processed most easily) as an octal value.
-    itb(bool mode(Mode mode, Combine combine = ALL))
+       Returns the object's raw, uninterpreted mode (tt(st_mode & RWX)). Note
+        that this value is usually displayed (and is processed most easily) as
+        an octal value.
+    itb(bool mode(size_t mode, Combine combine = ALL))
        Returns true if the object has the indicated mode. Multiple modes may
         be set, which can be combined by the logical bf(bitor) operator. By
         default, if multiple modes are specified, the resulting pattern must
         exactly represent the object's mode for the member function to return
         bf(true). An optional argument tt(ANY) may be specified if the
         function should return true if at least one specified mode matches the
-        object's actual mode.
+        object's actual mode. An tt(Errno) exception is thrown if the
+        specified tt(mode) contains other values than the defined bf(Mode)
+        or bf(SpecialMode) values. 
     itb(std::string modeStr() const)
        Returns the standard string-representation of the object's mode (e.g.,
         tt(rw-r--r--)). Special modes (e.g., suid) are indicated by tt(s)
@@ -149,9 +148,9 @@ bf(DEVICE).
         Returns the object's name as specified in the constructor or bf(set())
         member function.
     itb(size_t nBlocks() const)
-        Returns the object's number of allocated blocks.
+        Returns the object's number of allocated blocks (tt(st_blocks)).
     itb(size_t nLinks() const)
-        Returns the object's number of hard links.
+        Returns the object's number of hard links (tt(st_nlink)).
     itb(std::string path() const)
         Returns the object's full pathname. If the full pathname could not be
         determined, an empty string is returned.
@@ -167,24 +166,26 @@ bf(DEVICE).
         object is found. This object is then used. If tt(fname) is an absolute
         path, tt(searchPath) is ignored.
     itb(off_t size() const)
-        Returns the object's size in number of bytes.
-    itb(bool specialMode(SpecialMode special, Combine combine = ALL)) 
+        Returns the object's size in number of bytes (tt(st_size)).
+    itb(bool specialMode(size_t special, Combine combine = ALL)) 
        Returns true if the object has the indicated special modes.  Multiple
         special modes may be specified, which can be combined by the logical
         bf(bitor) operator. By default, if multiple modes are specified, the
         resulting pattern must exactly represent the object's mode for the
         member function to return bf(true). An optional argument tt(ANY) may
         be specified if the function should return true if at least one
-        specified mode matches the object's actual mode.
+        specified mode matches the object's actual mode. The non-special modes
+        are ignored but a tt(Errno) exception is thrown if tt(special)
+        contains other values than those defined by the bf(SpecialMode) enum. 
     itb(Stat::stat const &statStruct() const)
         Returns a reference to the object's bf(stat struct).
     itb(Stat::Type type() const)
-       Returns the tt(Stat::Type) of the object.
+       Returns the tt(Stat::Type) value of the object.
     itb(std::string typeStr() const)
        Returns a textual representation of the object's type as returned by
         the tt(Stat::type()) member function.
     itb(size_t uid() const)
-        Returns the user ID of the object's owner.
+        Returns the user ID of the object's owner (tt(st_uid)).
     )
 
 manpagesection(EXAMPLE)
