@@ -68,10 +68,10 @@ class Stat
         DateTime lastModification() const;
         Type type() const;
         bool isType(Type probe);
-        bool mode(Mode mode, Combine combi = ALL) const;
+        bool mode(size_t mode, Combine combi = ALL) const;
         bool set(std::string const &name);
         bool set(std::string const &name, std::string const &pathlist);
-        bool specialMode(SpecialMode specialMode, Combine combi = ALL) const;
+        bool specialMode(size_t specialMode, Combine combi = ALL) const;
         off_t size() const;
         operator bool() const;
         size_t blockSize() const;
