@@ -1,12 +1,12 @@
 #include "stat"
 
-#include <errno.h>
 #include <memory>
 #include <limits.h>
 #include <stdlib.h>
 #include <vector>
 
 #include <bobcat/string>
+#include <bobcat/errno>
 
 using namespace std;
 using namespace FBB;
