@@ -31,6 +31,9 @@ bobcat (1.20.0) (ISN)
   * Removed inline in inline virtual ~Errno() (needed because of a previous
     bug in g++, which has now been repaired)
 
+  * Added missing mode() and specialMode() functions to Stat, and added info
+    to the stat manpage indicating what fields of the 'struct stat' are
+    returned by specific accessor members.
 
 bobcat (1.19.0)
 
